tests/snapshots/run_file__eta.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/eta.bend
---
NumScott:
Id

Scott:
Id
