tests/snapshots/run_file__eta.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/eta.hvm
---
Strict mode:

Result: Id
- ITRS: 1
- TIME: 0.00s
- MIPS: 2.38
