tests/snapshots/run_file__example.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/example.bend
---
NumScott:
8

Scott:
8
