tests/snapshots/run_file__example.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/example.hvm
---
Lazy mode:
8

Strict mode:
8
