tests/snapshots/run_file__exp.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/exp.bend
---
[4m[1m[31mErrors:[0m
Error reading result from hvm. Output :
ERROR: attempt to clone a non-affine global reference.
