tests/snapshots/run_file__exp.hvm.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/exp.hvm
---
Strict mode:
Warnings:
During readback:
  Reached Root.


Result: λa λb let (e, d) = $c; (<Invalid> λ$c d e)
- ITRS: 8
- TIME: 0.00s
- MIPS: 4.81
