tests/snapshots/run_file__expand_main_combinator.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/expand_main_combinator.bend
---
NumScott:
λa (a 1 2)

Scott:
λa (a 1 2)
