tests/snapshots/run_file__expand_main_list.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/expand_main_list.bend
---
NumScott:
[1, 2, 3]

Scott:
[1, 2, 3]
