tests/snapshots/run_file__extracted_match_pred.bend.snap
---
source: tests/golden_tests.rs
input_file: tests/golden_tests/run_file/extracted_match_pred.bend
---
valZ
